@@ -1,3 +1,10 @@
+2017-03-21  Pat Haugen  <pthaugen@us.ibm.com>
+
+	Backport from mainline:
+	2017-03-17  Pat Haugen  <pthaugen@us.ibm.com>
+
+	* gcc.target/powerpc/pr79951.c: New.
+
 2017-03-15  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/80019
